# rag-system

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.etl  Dockerfile.proxy  LICENSE  Makefile  README.md  SECURITY.md  coverage.json  current_wave.md  docker-compose.e2e.yml  install.sh  mkdocs.yml  opencode.json  pyproject.toml  requirements-dev.txt  requirements-etl.txt  requirements-proxy.txt  requirements.txt  setup.sh
.claude/: architecture.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  model-evolution.yml  security.yml
.opencode/state/: codegraph-session-runtime.json
.rag-team/: state.json  team.md
artifacts/state/: context_compaction_log.md  current_wave.md  session_checkpoint.json
config/monitoring/: README.md  alerts.yml  docker-compose.monitoring.yml  ragas-dashboard.json
dashboard/: README.md  app.py  requirements.txt
data/: eval_dataset.json
deploy/docker/: .env.openwebui  docker-compose.distributed.yml  docker-compose.openwebui.dev.yml  docker-compose.openwebui.yml  docker-compose.prod.yml
deploy/haproxy/: haproxy.cfg  ssl.conf
deploy/k8s/: README.md
deploy/nginx/: generate-certs.sh  nginx.conf  ssl.conf
docs/: api_reference.md  deploy_etl.md  deploy_proxy.md  index.md
docs/adr/: ADR-003-dual-llm-architecture.md  ADR-004-openai-compatible-proxy.md  ADR-007-hitl-feedback-system.md
docs/adr.bak/: ADR-002-qdrant-hybrid-search.md  ADR-005-version-aware-indexing.md  ADR-007-hitl-feedback-system.md
docs/de/: index.md
docs/deployment/: index.md
docs/diagrams/: index.md  rag-system-architecture.excalidraw
docs/diagrams.bak/: c4-level2-containers.excalidraw
docs/en/: api_reference.md  architecture.md  deploy_etl.md  deploy_proxy.md  index.md  sli_slo.md
docs/fr/: index.md
docs/guides/: best-practices-checklist.md  deployment-guide.md  extensibility-data-sources.md  integration-opencode.md  knowledge-graph-strategy.md  operations-guide.md  performance-quality.md  roadmap.md  troubleshooting.md
docs/guides.bak/: access-control-rbac.md  index.md  knowledge-graph-strategy.md  roadmap.md
docs/mcp_server.bak/: index.md
docs/overrides/: language_redirect.html
docs/ru/: api_reference.md  architecture.md  deploy_etl.md  deploy_proxy.md  index.md  sli_slo.md
docs/stylesheets/: extra.css
docs/zh/: index.md
etl/: .env.example  Dockerfile.etl  __init__.py  docker-compose.yml  requirements_etl.txt
etl/chunker/: __init__.py  code_chunker.py  hash_versioning.py  semantic_chunker.py  table_extractor.py
etl/config/: __init__.py  etl_config.yaml
etl/extractors/: __init__.py  acl_extractor.py  base.py  base_extractor.py  book_extractor.py  chat_extractor.py  confluence.py  doc_extractor.py  gitlab.py  image_extractor.py  jira.py  quality_metrics.py
etl/graph_builder/: __init__.py  community.py  entity_extractor.py  neo4j_loader.py  schema.yaml
etl/indexer/: __init__.py  chunk_enricher.py  chunk_quality.py  live_vector_lake.py  qdrant_hybrid.py  remote_embedder.py  tree_builder.py  wal_manager.py
etl/scheduler/: __init__.py  cold_storage_cleanup.py  event_pipeline.py  run_etl.py  stream_consumer.py  stream_producer.py  streaming_pipeline.py  task_scheduler.py  webhook_server.py
eval/: README.md  retrieval_eval_dataset.jsonl
federation/: .env.example  Dockerfile  docker-compose.federation.yml  requirements.txt
federation/app/: auth.py  auto_router.py  circuit_breaker.py  config.py  exceptions.py  jwt_auth.py  main.py  merger.py  metrics.py  models.py  router.py  silo_client.py  silo_registry.py
federation/tests/: conftest.py  test_auth.py  test_auto_router.py  test_circuit_breaker.py  test_config.py  test_integration.py  test_main.py  test_merger.py  test_models.py  test_router.py  test_silo_client.py  test_silo_registry.py
hitl_dashboard/: dashboard.py  feedback_logger.py
logs/: audit.jsonl
mcp_server/: README.md  __init__.py  config.json  requirements.txt  server.py
model_evolution_service/: Dockerfile  __init__.py  config.py  exceptions.py  main.py  requirements.txt
model_evolution_service/api/: __init__.py  health.py  models.py  training.py
model_evolution_service/deployment/: __init__.py  adapter_manager.py  model_registry.py
model_evolution_service/evaluation/: __init__.py  eval_gate.py  nli_evaluator.py
model_evolution_service/trainers/: __init__.py  base.py  data_processor.py  llm.py  reranker.py  slm.py
monitoring/prometheus/: prometheus.yml
proxy/: .env.example  Dockerfile  __init__.py  docker-compose.ha.yml  docker-compose.override.yml  docker-compose.standalone.yml  docker-compose.yml  logrotate.conf  nginx.conf  redis-sentinel.conf  requirements_proxy.txt  requirements_proxy_gpu.txt
proxy/app/: __init__.py  ab_test.py  access_control.py  audit.py  auth.py  cache.py  circuit_breaker.py  confidence.py  config.py  context_builder.py  enricher.py  error_handler.py  evaluation.py  exceptions.py  grounding.py  hallucination.py  hitl.py  hyde.py  i18n.py  ldap_auth.py  live_sources.py  llm_router.py  logging_config.py  main.py  memory_manager.py  metrics.py  middleware.py  orchestrator.py  provider_adapter.py  query_enhancer.py  rate_limiter.py  rbac.py  remote_services.py  rerank.py  retrieval.py  retrieval_evaluator.py  sanitizer.py  security.py  slm_router.py  token_optimizer.py  (+5 more)
proxy/static/: widget.html
scripts/: __init__.py  backup_cron.sh  build_proxy.sh  clean_git_history.sh  deploy.sh  download_models_offline.py  eval_retrieval.py  evaluate_retrieval.py  export_openapi.py  init-openwebui.sh  init_collections.py  maturity_review.py  migrate.py  mock_llm_server.py  restore_all.sh  run_benchmarks.py  run_benchmarks.sh  run_chaos.sh  run_dependency_scan.sh  run_e2e.sh  run_minikube_tests.sh  setup_wizard.py  standalone_setup.sh
scripts/model_evolution/: __init__.py  evaluate_model.py  export_dataset.py  promote_model.py  train_llm.py  train_reranker.py  train_slm.py
scripts/ops/: README.md  backup_neo4j.sh  (+7 more)
tests/: conftest.py  requirements-test.txt
tui/: README.md  app.py  requirements.txt
(+604 files in other folders)
