[project]
name = "rag-system"
version = "2.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=proxy --cov=etl --cov-report=term-missing --cov-report=html"
markers = [
    "e2e: End-to-end tests requiring running services",
    "benchmark: Performance and load tests",
    "chaos: Resilience and chaos engineering tests",
    "asyncio: Tests using asyncio for async code paths",
    "slow: Tests that take longer than 5 seconds to complete",
    "integration: Tests that require external services (Qdrant, Neo4j, Redis)",
]

[tool.coverage.run]
source = ["proxy", "etl"]
omit = [
    "proxy/app/static/*",
    "etl/scheduler/streaming_pipeline.py",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"
